# turnon

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  clippy.toml  de.swsnr.turnon.desktop  de.swsnr.turnon.desktop.in  de.swsnr.turnon.gschema.xml  de.swsnr.turnon.metainfo.xml  de.swsnr.turnon.search-provider.ini  deny.toml  hatch_build.py  justfile  pyproject.toml  tasks.toml
.forgejo/workflows/: ci.yaml
.github/ISSUE_TEMPLATE/: 01-maintainer.md  config.yml
.github/workflows/: gettext.yml  image.yml  release.yml  test.yml  update-flatpak.yml
dbus-1/: de.swsnr.turnon.service
examples/: ping.rs
flatpak/: cargo-sources.json  de.swsnr.turnon.Devel.yaml  de.swsnr.turnon.cargo-sources.json  de.swsnr.turnon.yaml  pip-build.json
media/screenshots/: devices.json
po/: LINGUAS  POTFILES.in  cs.po  de.po  de.swsnr.turnon.pot  es.po  et.po  fa.po  fi.po  fr.po  he.po  ia.po  it.po  nl.po  pt_BR.po  tr.po  vi.po  xgettext.py  zh_Hans.po
resources/: de.swsnr.turnon.metainfo.xml  de.swsnr.turnon.metainfo.xml.in  device-row.blp  edit-device-dialog.blp  resources.data.gresource.xml  resources.generated.gresource.xml  resources.gresource.xml  shortcuts-dialog.blp  style.css  turnon-application-window.blp  validation-indicator.blp
resources/gtk/: help-overlay.blp  help-overlay.ui
resources/ui/: add-device-dialog.blp  add-device-dialog.ui  device-row.blp  device-row.ui  edit-device-dialog.blp  edit-device-dialog.ui  turnon-application-window.blp  turnon-application-window.ui  validation-indicator.blp  validation-indicator.ui  wakeup-application-window.blp  wakeup-application-window.ui  wakeup_application_window.blp  wakeup_application_window.ui
screenshots/: arp  build-social-image.bash  devices.json  run-for-screenshot.bash
scripts/: build-social-image.bash  prerelease.py
src/: app.rs  appid  commandline.rs  config.rs  dbus.rs  debuginfo.rs  futures.rs  gettext.rs  i18n.rs  log.rs  main.rs  model.rs  net.rs  ping.rs  searchprovider.rs  services.rs  storage.rs  testutil.rs  widgets.rs
src/app/: commandline.rs  debuginfo.rs  model.rs  searchprovider.rs  storage.rs  widgets.rs
src/app/model/: device.rs  device_discovery.rs  devices.rs  discovery.rs  registered_device.rs  wakeable_device.rs
src/app/widgets/: application_window.rs  device_row.rs  edit_device_dialog.rs  validation_indicator.rs
src/dbus/: invocation.rs  searchprovider2.rs
src/model/: device.rs  devices.rs
src/net/: arpcache.rs  boxed.rs  http.rs  macaddr.rs  monitor.rs  ping.rs  wol.rs
src/services/: ping_scheduler.rs  storage.rs
src/turnon/: __init__.py  app.py  cli.py  log.py  main.py  monitor.py  net.py  searchprovider.py  util.py  widgets.py
src/turnon/dbus/: __init__.py
src/turnon/model/: __init__.py  data.py  gobject.py  pure.py  storage.py
src/turnon/net/: __init__.py  arp.py  discovery.py  gio.py
src/turnon/widgets/: __init__.py  edit.py  row.py  util.py  window.py
src/widgets/: add_device_dialog.rs  application_window.rs  device_row.rs  edit_device_dialog.rs  validation_indicator.rs
supply-chain/: audits.toml  config.toml
tests/: test_net.py
tests/pure/: test_net.py
