[package]
name = "turnon"
description = "Turn on devices in your network"
homepage = "https://codeberg.org/swsnr/turnon"
repository = "https://codeberg.org/swsnr/turnon"
license = "EUPL-1.2"
authors = ["Sebastian Wiesner <sebastian@swsnr.de>"]
# Our version number.  Since semver doesn't make much sense for UI applications
# which have no API we repurpose the version numer as follows:
#
# - major: Major new features or major changes to the UI, which may break the app for some users.
# - minor: User-visible features or bugfixes.
# - patch: Translation updates.
#
# Major and minor releases get release notes, but patch releases do not; this
# enables us to ship updates to translations whenever translators contributed
# new languages or made major updates, while still providing meaningful release
# notes for the last functional changes.
version = "2.7.1"
edition = "2024"
publish = false
rust-version = "1.87"

[dependencies]
adw = { package = "libadwaita", version = "0.7.0", features = ["v1_7"] }
async-channel = "2.3.1"
futures-util = { version = "0.3.31" }
glib = { version = "0.20.9", features = ["log_macros"] }
gnome-app-utils = { git = "https://codeberg.org/swsnr/gnome-app-utils.rs.git", branch = "main" }
gtk = { package = "gtk4", version = "0.9.6", features = ["v4_18", "gnome_47"] }
log = "0.4.22"
macaddr = "1.0.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
bitflags = "2.6.0"
semver = "1.0.24"
libc = "0.2.161"
wol = "0.3.0"

[package.metadata.release]
pre-release-commit-message = "Release {{version}}"
tag-message = "Turn On {{tag_name}}"
publish = false
# We push manually only if the release looks good
push = false
# The justfile runs all tests before releasing
verify = false
sign-tag = true
sign-commit = true
pre-release-hook = ["scripts/prerelease.py", "{{tag_name}}", "{{date}}"]
