[package]
name = "turnon"
description = "Turn on devices in your network"
homepage = "https://codeberg.org/swsnr/turnon"
repository = "https://codeberg.org/swsnr/turnon"
license = "EUPL-1.2"
authors = ["Sebastian Wiesner <sebastian@swsnr.de>"]
# Our version number.  Since semver doesn't make much sense for UI applications
# which have no API we repurpose the version numer as follows:
#
# - major: Major new features or major changes to the UI, which may break the app for some users.
# - minor: User-visible features or bugfixes.
# - patch: Translation updates.
#
# Major and minor releases get release notes, but patch releases do not; this
# enables us to ship updates to translations whenever translators contributed
# new languages or made major updates, while still providing meaningful release
# notes for the last functional changes.
version = "2.8.2"
edition = "2024"
publish = false
rust-version = "1.89"

[dependencies]
adw = { package = "libadwaita", version = "0.8.0", features = ["v1_7"] }
async-channel = "2.3.1"
glib = { version = "0.21.0", features = ["log_macros"] }
gnome-app-utils = { git = "https://codeberg.org/swsnr/gnome-app-utils.rs.git", rev = "ee945bcb72184adec41afa4eb48a0d279807a4fb" }
gtk = { package = "gtk4", version = "0.10.1", features = ["gnome_48"] }
macaddr = "1.0.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
bitflags = "2.6.0"
semver = "1.0.24"
wol = "0.4.0"
formatx = "0.2.4"

[package.metadata.release]
pre-release-commit-message = "Release {{version}}"
tag-message = "Turn On {{tag_name}}"
publish = false
# The justfile runs all tests before releasing
verify = false
sign-tag = true
sign-commit = true

[[package.metadata.release.pre-release-replacements]]
file = "de.swsnr.turnon.metainfo.xml"
search = "version=\"next\""
replace = "version=\"{{version}}\""
min = 0
max = 1

[[package.metadata.release.pre-release-replacements]]
file = "de.swsnr.turnon.metainfo.xml"
search = "date=\"9999-01-01\""
replace = "date=\"{{date}}\""
min = 0
max = 1

[[package.metadata.release.pre-release-replacements]]
file = "de.swsnr.turnon.metainfo.xml"
search = "<url>https://codeberg.org/swsnr/turnon/releases/tag/next</url>"
replace = "<url>https://codeberg.org/swsnr/turnon/releases/tag/{{tag_name}}</url>"
min = 0
max = 1
