[package]
name = "turnon"
description = "Turn on devices in your network"
homepage = "https://codeberg.org/swsnr/turnon"
repository = "https://codeberg.org/swsnr/turnon"
license = "EUPL-1.2"
authors = ["Sebastian Wiesner <sebastian@swsnr.de>"]
# Our version number.  Since semver doesn't make much sense for UI applications
# which have no API we repurpose the version numer as follows:
#
# - major: Major new features or major changes to the UI, which may break the app for some users.
# - minor: User-visible features or bugfixes.
# - patch: Translation updates.
#
# Major and minor releases get release notes, but patch releases do not; this
# enables us to ship updates to translations whenever translators contributed
# new languages or made major updates, while still providing meaningful release
# notes for the last functional changes.
version = "2.9.5"
edition = "2024"
publish = false
rust-version = "1.93"

[dependencies]
adw = { package = "libadwaita", version = "0.9.1", features = ["v1_8"] }
async-channel = "2.3.1"
glib = { version = "0.22.0", features = ["log_macros"] }
gnome-app-utils = { git = "https://codeberg.org/swsnr/gnome-app-utils.rs.git", rev = "f7079b38eef53f0d15ff352f21e0888563e1f3bf" }
gtk = { package = "gtk4", version = "0.11.0" }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
bitflags = "2.6.0"
semver = "1.0.24"
wol = "0.5.0"
formatx = "0.2.4"
rustix = { version = "1.1.2", features = ["net"] }

[package.metadata.release]
pre-release-commit-message = "Release {{version}}"
tag-message = "Turn On {{tag_name}}"
publish = false
# The justfile runs all tests before releasing
verify = false
sign-tag = true
sign-commit = true

[[package.metadata.release.pre-release-replacements]]
file = "de.swsnr.turnon.metainfo.xml"
search = "version=\"next\""
replace = "version=\"{{version}}\""
min = 0
max = 1

[[package.metadata.release.pre-release-replacements]]
file = "de.swsnr.turnon.metainfo.xml"
search = "date=\"9999-01-01\""
replace = "date=\"{{date}}\""
min = 0
max = 1

[[package.metadata.release.pre-release-replacements]]
file = "de.swsnr.turnon.metainfo.xml"
search = "<url>https://codeberg.org/swsnr/turnon/releases/tag/next</url>"
replace = "<url>https://codeberg.org/swsnr/turnon/releases/tag/{{tag_name}}</url>"
min = 0
max = 1
